--- a/src/main/webapp/Services.html
+++ b/src/main/webapp/Services.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="index.css">
-    <title>WIT</title>
+    <link rel="stylesheet" type="text/css" href="Service.css">
+    <title>Document</title>
 </head>
 <body>
     <nav>
@@ -15,9 +15,8 @@
             <li><a href="Departments.html">Departments</a></li>
             <li><a href="Contact.html">Contact us</a></li>
         </ul>
-        <img src="./WIT_Main_Building.jpg"alt="College Image">
-        <h1>Welcome to Walchand Institue of Technology Solapur</h1>
+        <h1>Welcome to Services Page</h1>
+        <!-- <h2>Welcome to Walchand Institute of Technology ,Solapur</h2> -->
     </nav>
-    
 </body>
 </html>
