--- a/src/main/webapp/Departments.html
+++ b/src/main/webapp/Departments.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="index.css">
-    <title>WIT</title>
+    <link rel="stylesheet" type="text/css" href="department.css">
+    <title>Document</title>
 </head>
 <body>
     <nav>
@@ -15,9 +15,16 @@
             <li><a href="Departments.html">Departments</a></li>
             <li><a href="Contact.html">Contact us</a></li>
         </ul>
-        <img src="./WIT_Main_Building.jpg"alt="College Image">
-        <h1>Welcome to Walchand Institue of Technology Solapur</h1>
+        <h1>Welcome to Department Page</h1>
+        <h2>We have following departments in our college : <br>
+        1) Infromation Technology <br>
+        2) Computer Science Engineering <br>
+        3) ELN <br>
+        4) E&TC <br>
+        5) ECE <br>
+        6) Mechanical Engg. <br>
+        7) Civil Engg.</h2>
+        <!-- <h2>Welcome to Walchand Institute of Technology ,Solapur</h2> -->
     </nav>
-    
 </body>
 </html>
